@@ -1,3 +1,7 @@
+2025-12-01  Kevin Ushey <kevinushey@gmail.com>
+
+	* R/Attributes.R: Update OpenMP plugin for macOS
+
 2025-11-29  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/RcppLdpath.R: Revisit deprecation warnings via 'message()' to be
